# AgentincOS-Native

./: .gitignore  Caddyfile  Final_GMT_Course.mbz  GMT_Cabin_Crew_Full_Interactive_Course.mbz  GMT_INFOHAS_FINAL_CONTEXT.mbz  GMT_INFOHAS_FIXED.mbz  Gemini.bat  INFOHAS_GMT_FULL_COURSE.mbz  README.md  adaptive-suite.skill  add_modules_final.js  add_modules_terminal.js  agent-autonomy-kit.skill  agent-memory.skill  analyze_lighthouse.js  apply_changes.js  backup_menus.js  banner-design.skill  brand.skill  check_functions_conflict.js  check_login_status.js  check_qm.js  check_wprocket.js  convert_to_docx.ps1  coworker-persona.skill  deep-browser.skill  eslint.config.mjs  extract_pdf.py  fullstack-engineer.skill  gemma-4-skill.md  generate_mbz.py  generate_phase95_reports.py  get_avada_css.js  get_customizer_css.js  get_qm_details.js  get_qm_summary_simple.js  gh-management.skill  help.txt  hermes_blog.json  hermes_chat.json  (+66 more)
.next/: trace  trace-build
adaptive-suite/: SKILL.md
agent-autonomy-kit/: SKILL.md
agent-ctx/: hermes-optimization-main-agent.md
agent-memory/: SKILL.md
backups/: functions.php  header.php
controle et examens/: Fiche ATAM-01 - Controle Continu.docx  Fiche ATAM-01 - Controle Pratique.docx  Fiche ATAM-01 - Controle Sommatif.docx  Fiche ATAM-02 - Controle Continu.docx  Fiche ATAM-02 - Controle Pratique.docx  Fiche ATAM-02 - Controle Sommatif.docx  Fiche ATAM-03 - Controle Continu.docx  Fiche ATAM-03 - Controle Pratique.docx  (+68 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  security.rs  tray.rs  updater.rs
(+355 files in other folders)
