[package]
name = "agentic-os-v2"
version = "2.0.0"
description = "Agentic OS V2 — Autonomous AI Operating System"
authors = ["AgenticOS Team"]
edition = "2021"

[lib]
name = "agentic_os_v2_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-store = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
dirs = "5"
keyring = "2"
aes-gcm = "0.10"
base64 = "0.22"
sha2 = "0.10"
rand = "0.8"
num_cpus = "1"
hostname = "0.4"
